[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenario/Pizzaria/Inside/filled.png" type="Texture" id=1]
[ext_resource path="res://Interface/Turret Store/TurretStore.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenario/Pizzaria/Building/terreo.png" type="Texture" id=3]
[ext_resource path="res://Scenario/Pizzaria/Building/Pizzaria.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 310.8, 9013.51 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5471, 80.0135 )

[node name="Pizzaria" type="Area2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 3 )

[node name="TurretStore" parent="." instance=ExtResource( 2 )]

[node name="Floors" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8000 )
shape = SubResource( 1 )

[node name="Inside" type="Sprite" parent="."]
visible = false
position = Vector2( -0.0950153, 4.99469 )
scale = Vector2( 1.95, 1.6 )
z_index = -2
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Inside"]
position = Vector2( -79.9318, 61.62 )
scale = Vector2( 0.51282, 0.625 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inside/Area2D"]
position = Vector2( 182.036, -1.09324 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Pizzaria_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pizzaria_body_exited"]
[connection signal="body_entered" from="Inside/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Inside/Area2D" to="." method="_on_Area2D_body_exited"]
